--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Discord Clone" />
+    <meta name="description" content="Fooncord" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Discord Clone</title>
+    <title>Fooncord</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
