--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Fooncord" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Fooncord</title>
+    <title>dip dip real</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
